--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,9 +32,8 @@ excludes=
 file.reference.Abrir_flujo.jar=Abrir_flujo.jar
 file.reference.AdquirirHS.jar=AdquirirHS.jar
 file.reference.Cerrar_flujo.jar=Cerrar_flujo.jar
-file.reference.ConfigGeneratorHS3.jar=ConfigGeneratorHS3.jar
+file.reference.ConfigGeneratorHS3.jar=ConfigGeneratorHS3/for_testing/ConfigGeneratorHS3.jar
 file.reference.ConfigHS.jar=ConfigHS.jar
-file.reference.HandyScope.jar=HandyScope.jar
 file.reference.InitHS.jar=32bits/InitHS/for_testing/InitHS.jar
 file.reference.javabuilder.jar=C:\\Program Files\\MATLAB\\MATLAB Production Server\\R2015a\\toolbox\\javabuilder\\jar\\javabuilder.jar
 file.reference.jcalendar-1.4.jar=D:\\Documents\\lib\\jcalendar-1.4.jar
@@ -46,13 +45,12 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.HandyScope.jar}:\
     ${file.reference.Signals.jar}:\
     ${file.reference.RXTXcomm.jar-1}:\
     ${file.reference.javabuilder.jar}:\
     ${file.reference.ConfigHS.jar}:\
-    ${file.reference.ConfigGeneratorHS3.jar}:\
     ${file.reference.InitHS.jar}:\
+    ${file.reference.ConfigGeneratorHS3.jar}:\
     ${file.reference.AdquirirHS.jar}:\
     ${file.reference.Abrir_flujo.jar}:\
     ${file.reference.Cerrar_flujo.jar}
