Se intenta escribir el arreglo obtenido en un .mat

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.GetTriggerOn.jar=32bits/GetTriggerOn/for_testing/GetTriggerOn.jar
 file.reference.InitHS.jar=32bits/InitHS/for_testing/InitHS.jar
 file.reference.javabuilder.jar=C:\\Program Files\\MATLAB\\MATLAB Production Server\\R2015a\\toolbox\\javabuilder\\jar\\javabuilder.jar
 file.reference.jcalendar-1.4.jar=D:\\Documents\\lib\\jcalendar-1.4.jar
+file.reference.jmatio.jar=jmatio.jar
 file.reference.RXTXcomm.jar-1=C:\\Program Files\\Java\\jdk1.8.0_40\\jre\\lib\\ext\\RXTXcomm.jar
 file.reference.Signals.jar=Signals.jar
 includes=**
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.Abrir_flujo.jar}:\
     ${file.reference.Cerrar_flujo.jar}:\
     ${file.reference.GetTriggerOn.jar}:\
-    ${file.reference.GetTriggerOff.jar}
+    ${file.reference.GetTriggerOff.jar}:\
+    ${file.reference.jmatio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
